force-app/main/default/objects/gr_Funding_Award_Term_and_Conditions__c/gr_Funding_Award_Term_and_Conditions__c.object-meta.xml
<CustomObject>
    <label>Funding Award Term and Conditions</label>
    <nameField>
        <label>Funding Award Term and Conditions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Award Term and Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>