force-app/main/default/objects/gr_Funding_Award_Term_and_Conditions__c/fields/gr_Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>gr_Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Funding Award Term and Conditions</relationshipLabel>
    <relationshipName>Funding_Award_Term_and_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>