force-app/main/default/objects/gr_Funding_Award_Term_and_Conditions__c/fields/gr_Grant_Award_Terms_And_Conditions_ID__c.field-meta.xml
<CustomField>
    <fullName>gr_Grant_Award_Terms_And_Conditions_ID__c</fullName>
    <description>A unique identifier associated with an individual term or condition.</description>
    <inlineHelpText>A unique identifier associated with an individual term or condition.</inlineHelpText>
    <label>Grant Award Terms And Conditions ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>