force-app/main/default/objects/gr_Funding_Award_Term_and_Conditions__c/fields/gr_Terms_And_Conditions_Description__c.field-meta.xml
<CustomField>
    <fullName>gr_Terms_And_Conditions_Description__c</fullName>
    <description>The text of an individual term or condition stating the nature of the requirement, and, if applicable, the reason why the requirement is being imposed, the nature of the action(s) needed to remove the additional requirement, the time allowed for completing the action(s), and the method for requesting reconsideration of the requirement imposed.</description>
    <inlineHelpText>The text of an individual term or condition stating the nature of the requirement, and, if applicable, the reason why the requirement is being imposed, the nature of the action(s) needed to remove the additional requirement, the time allowed for completing the action(s), and the method for requesting reconsideration of the requirement imposed.</inlineHelpText>
    <label>Terms And Conditions Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>