force-app/main/default/objects/gr_Funding_Award_Term_and_Conditions__c/fields/gr_Terms_And_Conditions_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>gr_Terms_And_Conditions_Type_Code__c</fullName>
    <description>A code identifying the category of an individual term or condition applicable to the Federal award.</description>
    <inlineHelpText>A code identifying the category of an individual term or condition applicable to the Federal award.</inlineHelpText>
    <label>Terms And Conditions Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative requirement</fullName>
            </value>
            <value>
                <fullName>Future budget period</fullName>
            </value>
            <value>
                <fullName>National policy requirement</fullName>
            </value>
            <value>
                <fullName>Recipient integrity and performance matter</fullName>
            </value>
            <value>
                <fullName>Termination provision</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>